tests/snapshots/integration_test__arbiter_custom_hook.snap
---
source: tests/integration_test.rs
expression: sv
---
module QosArbiter #(
  parameter int NUM_REQ = 4
) (
  input logic clk,
  input logic rst,
  input logic [7:0] qos,
  output logic grant_valid,
  output logic [1:0] grant_requester,
  input logic [NUM_REQ-1:0] request_valid,
  output logic [NUM_REQ-1:0] request_ready
);

  function automatic logic [3:0] QosGrant(input logic [3:0] req_mask, input logic [3:0] last_grant, input logic [7:0] qos);
    logic [3:0] masked;
    logic [3:0] fair_pick;
    logic urgent;
    logic [3:0] pick;
    logic [4:0] pick_neg;
    masked = req_mask & (last_grant ^ 'hF);
    fair_pick = masked != 0 ? masked : req_mask;
    urgent = (qos & 'h80) != 0;
    pick = urgent ? req_mask : fair_pick;
    pick_neg = 5'($unsigned(pick ^ 'hF)) + 1;
    QosGrant = pick & 4'(pick_neg);
  endfunction
  
  logic [3:0] last_grant_r;
  logic [3:0] grant_onehot;
  
  always_ff @(posedge clk) begin
    if (rst) last_grant_r <= '0;
    else if (grant_valid) last_grant_r <= grant_onehot;
  end
  
  always_comb begin
    grant_onehot = QosGrant(request_valid, last_grant_r, qos);
    grant_valid = |grant_onehot;
    request_ready = grant_onehot;
    grant_requester = '0;
    for (int ci = 0; ci < 4; ci++) begin
      if (grant_onehot[ci]) grant_requester = 2'(ci);
    end
  end

endmodule
