tests/snapshots/integration_test__clog2_in_type_args.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module FifoCtrl #(
  parameter int DEPTH = 16
) (
  input logic clk,
  input logic rst,
  output logic [$clog2(DEPTH)-1:0] wr_ptr,
  output logic [$clog2(DEPTH)-1:0] rd_ptr,
  output logic [($clog2(DEPTH) + 1)-1:0] count
);

  logic [$clog2(DEPTH)-1:0] wr_r = 0;
  logic [$clog2(DEPTH)-1:0] rd_r = 0;
  always_ff @(posedge clk) begin
    if (rst) begin
      rd_r <= 0;
      wr_r <= 0;
    end else begin
      wr_r <= $clog2(DEPTH)'((wr_r + 1));
      rd_r <= rd_r;
    end
  end
  assign wr_ptr = wr_r;
  assign rd_ptr = rd_r;
  assign count = (wr_r - rd_r);

endmodule
