tests/snapshots/integration_test__cpu_pipeline.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain CoreDomain
//   freq_mhz: 200

module Alu #(
  parameter int WIDTH = 32
) (
  input logic [WIDTH-1:0] a,
  input logic [WIDTH-1:0] b,
  output logic [WIDTH-1:0] result
);

  assign result = WIDTH'(a + b);

endmodule

module CpuPipe #(
  parameter int XLEN = 32,
  parameter int REG_ADDR_W = 5
) (
  input logic clk,
  input logic rst,
  input logic [XLEN-1:0] imem_data,
  input logic imem_valid,
  input logic [XLEN-1:0] rs1_data,
  input logic [XLEN-1:0] rs2_data,
  output logic [XLEN-1:0] pc_out,
  output logic [XLEN-1:0] wb_data,
  output logic [REG_ADDR_W-1:0] wb_rd,
  output logic wb_we,
  input logic branch_taken,
  input logic [XLEN-1:0] branch_target
);

  // ── Stage valid registers ──
  logic fetch_valid_r;
  logic decode_valid_r;
  logic execute_valid_r;
  logic writeback_valid_r;
  
  // ── Stage data registers ──
  logic [XLEN-1:0] fetch_pc;
  logic [XLEN-1:0] fetch_instr;
  logic [6:0] decode_opcode;
  logic [REG_ADDR_W-1:0] decode_rd;
  logic [XLEN-1:0] decode_rs1_val;
  logic [XLEN-1:0] decode_rs2_val;
  logic [XLEN-1:0] decode_pc;
  logic [XLEN-1:0] decode_rs1_fwd;
  logic [XLEN-1:0] execute_alu_result;
  logic [REG_ADDR_W-1:0] execute_rd;
  logic execute_we;
  logic [XLEN-1:0] execute_pc;
  logic [XLEN-1:0] execute_alu_out;
  logic [XLEN-1:0] writeback_result;
  logic [REG_ADDR_W-1:0] writeback_rd;
  logic writeback_valid;
  logic [XLEN-1:0] writeback_pc;
  
  // ── Stall signals ──
  logic fetch_stall;
  logic decode_stall;
  logic execute_stall;
  logic writeback_stall;
  assign writeback_stall = 1'b0;
  assign execute_stall = writeback_stall;
  assign decode_stall = ((execute_we && (execute_rd == fetch_instr[11:7])) && (execute_rd != 0)) || execute_stall;
  assign fetch_stall = (!imem_valid) || decode_stall;
  
  // ── Pipeline control register updates ──
  always_ff @(posedge clk) begin
    if (rst) begin
      fetch_valid_r <= 1'b0;
      decode_valid_r <= 1'b0;
      execute_valid_r <= 1'b0;
      writeback_valid_r <= 1'b0;
    end else begin
      if (!fetch_stall) begin
        fetch_valid_r <= 1'b1;
      end
      if (!decode_stall) begin
        decode_valid_r <= fetch_stall ? 1'b0 : fetch_valid_r;
      end
      if (!execute_stall) begin
        execute_valid_r <= decode_stall ? 1'b0 : decode_valid_r;
      end
      if (!writeback_stall) begin
        writeback_valid_r <= execute_stall ? 1'b0 : execute_valid_r;
      end
      if (branch_taken) begin
        fetch_valid_r <= 1'b0;
      end
      if (branch_taken) begin
        decode_valid_r <= 1'b0;
      end
    end
  end
  
  // ── Synchronous/reset-free stage data updates ──
  always_ff @(posedge clk) begin
    if (!fetch_stall) begin
      fetch_pc <= branch_target;
      fetch_instr <= imem_data;
    end
    if (!decode_stall) begin
      decode_opcode <= fetch_instr[6:0];
      decode_rd <= fetch_instr[11:7];
      decode_rs1_val <= rs1_data;
      decode_rs2_val <= rs2_data;
      decode_pc <= fetch_pc;
    end
    if (!execute_stall) begin
      execute_alu_result <= execute_alu_out;
      execute_rd <= decode_rd;
      execute_we <= (decode_opcode != 0);
      execute_pc <= decode_pc;
    end
    if (!writeback_stall) begin
      writeback_result <= execute_alu_result;
      writeback_rd <= execute_rd;
      writeback_valid <= execute_we;
      writeback_pc <= execute_pc;
    end
    if (rst) begin
      fetch_pc <= 0;
      fetch_instr <= 0;
      decode_opcode <= 0;
      decode_rd <= 0;
      decode_rs1_val <= 0;
      decode_rs2_val <= 0;
      decode_pc <= 0;
      execute_alu_result <= 0;
      execute_rd <= 0;
      execute_we <= 1'b0;
      execute_pc <= 0;
      writeback_result <= 0;
      writeback_rd <= 0;
      writeback_valid <= 1'b0;
      writeback_pc <= 0;
    end
  end
  
  // ── Combinational outputs ──
  always_comb begin
    if (((execute_we && (execute_rd == decode_rd)) && (execute_rd != 0))) begin
      decode_rs1_fwd = execute_alu_result;
    end else begin
      decode_rs1_fwd = decode_rs1_val;
    end
  end
  Alu #(.WIDTH(XLEN)) alu0 (
    .a(decode_rs1_fwd),
    .b(decode_rs2_val),
    .result(execute_alu_out)
  );
  assign wb_data = writeback_result;
  assign wb_rd = writeback_rd;
  assign wb_we = (writeback_valid && writeback_valid_r);
  assign pc_out = writeback_pc;

endmodule
