tests/snapshots/integration_test__fsm_traffic_light.snap
---
source: tests/integration_test.rs
assertion_line: 133
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module TrafficLight #(
  parameter int TIMER_W = 8
) (
  input logic clk,
  input logic rst,
  input logic [TIMER_W-1:0] timer,
  output logic red,
  output logic yellow,
  output logic green
);

  typedef enum logic [1:0] {
    RED = 2'd0,
    YELLOW = 2'd1,
    GREEN = 2'd2
  } TrafficLight_state_t;
  
  TrafficLight_state_t state_r, state_next;
  
  always_ff @(posedge clk) begin
    if (rst) begin
      state_r <= RED;
    end else begin
      state_r <= state_next;
    end
  end
  
  always_comb begin
    state_next = state_r; // hold by default
    unique case (state_r)
      RED: begin
        if (timer == 0) state_next = GREEN;
      end
      GREEN: begin
        if (timer == 0) state_next = YELLOW;
      end
      YELLOW: begin
        if (timer == 0) state_next = RED;
      end
      default: state_next = state_r;
    endcase
  end
  
  always_comb begin
    red = 1'b0;
    yellow = 1'b0;
    green = 1'b0;
    unique case (state_r)
      RED: begin
        red = 1'b1;
      end
      GREEN: begin
        green = 1'b1;
      end
      YELLOW: begin
        yellow = 1'b1;
      end
      default: ;
    endcase
  end
  
  // synopsys translate_off
  _auto_legal_state: assert property (@(posedge clk) !rst |-> state_r < 3)
    else $fatal(1, "FSM ILLEGAL STATE: TrafficLight.state_r = %0d", state_r);
  _auto_reach_Red: cover property (@(posedge clk) state_r == RED);
  _auto_reach_Yellow: cover property (@(posedge clk) state_r == YELLOW);
  _auto_reach_Green: cover property (@(posedge clk) state_r == GREEN);
  _auto_tr_RED_to_GREEN: cover property (@(posedge clk) state_r == RED && state_next == GREEN);
  _auto_tr_GREEN_to_YELLOW: cover property (@(posedge clk) state_r == GREEN && state_next == YELLOW);
  _auto_tr_YELLOW_to_RED: cover property (@(posedge clk) state_r == YELLOW && state_next == RED);
  // synopsys translate_on

endmodule
