tests/snapshots/integration_test__generate_for.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module PassThrough (
  input logic a,
  output logic b
);

  assign b = a;

endmodule

module GenDemo #(
  parameter int N = 2
) (
  input logic clk,
  input logic rst,
  input logic [N-1:0] req,
  output logic [N-1:0] gnt
);

  PassThrough pt_0 (
    .a(req[0]),
    .b(gnt[0])
  );
  PassThrough pt_1 (
    .a(req[1]),
    .b(gnt[1])
  );

endmodule
