tests/snapshots/integration_test__generate_if_true.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module DebugModule (
  input logic clk,
  output logic [8-1:0] debug_out
);

  assign debug_out = 0;

endmodule
